--- a/app/src/main/res/layout/content_form_feature.xml
+++ b/app/src/main/res/layout/content_form_feature.xml
@@ -125,7 +125,9 @@
                     android:hint="0 IDR"
                     android:imeOptions="actionNext"
                     android:inputType="number"
+                    android:maxLength="11"
                     android:padding="@dimen/min_padding" />
+
             </LinearLayout>
 
             <LinearLayout
