--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,7 +45,7 @@
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/colorNearWhite"
                     android:drawableEnd="@drawable/ic_person_white_24dp"
-                    android:hint="Email/Phone"
+                    android:hint="Email / No. HP"
                     android:imeOptions="actionNext"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
@@ -138,7 +138,7 @@
                 android:layout_marginLeft="10dp"
                 android:fontFamily="sans-serif"
                 android:gravity="center"
-                android:text="Daftar Akun Baru"
+                android:text="Daftar Akun Partner"
                 android:textColor="@android:color/white"
                 android:textSize="16sp"
                 android:textStyle="bold"/>
