--- a/app/src/main/res/layout/content_complete_registration.xml
+++ b/app/src/main/res/layout/content_complete_registration.xml
@@ -141,7 +141,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/xmin_padding"
                 android:padding="@dimen/xmin_padding"
-                android:text="Saya mengerti dengan Kententuan dan Kebijakan yang berlaku."
+                android:text="Saya mengerti dengan Ketentuan dan Kebijakan yang berlaku."
                 android:textColor="@color/colorWhite"
                 android:textSize="10sp" />
 
