--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -429,7 +429,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/xmin_padding"
                             android:gravity="left"
-                            android:text="Nilai"
+                            android:text="Rating"
                             android:textStyle="bold"
                             android:textColor="@color/colorWhite"
                             android:textSize="@dimen/medium_text" />
@@ -483,7 +483,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/xmin_padding"
                             android:gravity="left"
-                            android:text="Aset"
+                            android:text="Jumlah Aset"
                             android:textStyle="bold"
                             android:textColor="@color/colorWhite"
                             android:textSize="@dimen/medium_text"/>
@@ -541,7 +541,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/xmin_padding"
                             android:gravity="left"
-                            android:text="Sukses"
+                            android:text="Transaksi Selesai"
                             android:textStyle="bold"
                             android:textColor="@color/colorWhite"
                             android:textSize="@dimen/medium_text" />
@@ -593,7 +593,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/xmin_padding"
                             android:gravity="left"
-                            android:text="Berlangsung"
+                            android:text="Transaksi Sedang berlangsung"
                             android:textStyle="bold"
                             android:textColor="@color/colorWhite"
                             android:textSize="@dimen/medium_text" />
