--- a/app/src/main/res/layout/content_detail_aset.xml
+++ b/app/src/main/res/layout/content_detail_aset.xml
@@ -991,7 +991,7 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Driver "
+                                android:text="Pengemudi "
                                 android:textColor="@color/colorBlack54"
                                 android:textSize="@dimen/calendar_text_small" />
 
@@ -1290,6 +1290,33 @@
                                 android:textSize="@dimen/calendar_text_small"
                                 android:textAlignment="textEnd"
                                 tools:text="0 KM" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            >
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/min_padding"
+                                android:textColor="@color/colorBlack"
+                                android:textSize="@dimen/almost_tiny_text"
+                                android:layout_weight="1"
+                                android:text="Jarak Gratis Ongkir" />
+
+                            <TextView
+                                android:id="@+id/as_distance_free"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/colorBlack"
+                                android:layout_weight="1"
+                                android:textSize="@dimen/calendar_text_small"
+                                android:textAlignment="textEnd"
+                                tools:text="2.000 IDR" />
 
                         </LinearLayout>
 
