--- a/app/src/main/res/layout/content_form_driver.xml
+++ b/app/src/main/res/layout/content_form_driver.xml
@@ -178,9 +178,10 @@
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@+id/country_code"
                         android:ems="10"
+                        android:maxLength="11"
                         android:hint="8xx xxxx xxxx"
                         android:imeOptions="actionNext"
-                        android:inputType="phone"
+                        android:inputType="number"
                         android:padding="@dimen/min_padding" />
 
                 </RelativeLayout>
@@ -207,6 +208,7 @@
                     android:layout_height="wrap_content"
                     android:ems="10"
                     android:hint="SIM"
+                    android:maxLength="12"
                     android:imeOptions="actionNext"
                     android:inputType="number"
                     android:padding="@dimen/min_padding" />
@@ -226,7 +228,7 @@
                     android:text="Tanggal Lahir"
                     android:textColor="@color/colorBlack" />
 
-                <EditText
+                <TextView
                 android:id="@+id/dr_bdate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
