--- a/app/src/main/res/layout/content_form_user.xml
+++ b/app/src/main/res/layout/content_form_user.xml
@@ -163,7 +163,8 @@
                         android:ems="10"
                         android:hint="8xx xxxx xxxx"
                         android:imeOptions="actionNext"
-                        android:inputType="phone"
+                        android:inputType="number"
+                        android:maxLength="11"
                         android:padding="@dimen/min_padding" />
 
                 </RelativeLayout>
