--- a/app/src/main/res/layout/content_form_yacht_aset.xml
+++ b/app/src/main/res/layout/content_form_yacht_aset.xml
@@ -64,7 +64,7 @@
                             android:id="@+id/textView1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Sub Kategori Aset"
+                            android:text="@string/klasifikasi_aset"
                             android:textColor="@color/colorBlack" />
 
                         <LinearLayout
@@ -837,7 +837,7 @@
                                     android:buttonTint="@color/colorPrimary"
                                     android:checked="true"
                                     android:contextClickable="false"
-                                    android:text="Diambil" />
+                                    android:text="@string/deliv_pickup" />
 
                                 <RadioButton
                                     android:id="@+id/r_deliver"
@@ -845,7 +845,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:buttonTint="@color/colorPrimary"
-                                    android:text="Dikirim" />
+                                    android:text="@string/deliv_deliver" />
 
                                 <!--<RadioButton-->
                                 <!--android:id="@+id/r_logistic"-->
@@ -1002,7 +1002,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content">
 
-                                <com.aldoapps.autoformatedittext.AutoFormatEditText
+                                <EditText
                                     android:id="@+id/as_nominal_deposit"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
