--- a/app/src/main/res/layout/content_user_detail.xml
+++ b/app/src/main/res/layout/content_user_detail.xml
@@ -61,6 +61,7 @@
                 android:layout_margin="@dimen/min_padding"
                 android:background="@android:color/transparent"
                 android:padding="@dimen/min_padding"
+                android:visibility="gone"
                 app:SpinKit_Color="@color/colorPrimary" />
 
             <android.support.v7.widget.CardView
