--- a/app/src/main/res/layout-v21/activity_login.xml
+++ b/app/src/main/res/layout-v21/activity_login.xml
@@ -37,42 +37,38 @@
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColorHint="@color/colorNearWhite"
-                android:layout_marginBottom="@dimen/xmin_padding">
+                android:textColorHint="@color/colorNearWhite">
 
                 <AutoCompleteTextView
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:backgroundTint="@color/colorNearWhite"
                     android:drawableEnd="@drawable/ic_person_white_24dp"
                     android:hint="Email / No. HP"
                     android:imeOptions="actionNext"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
-                    android:textColor="@android:color/white"
-                    android:background="@color/colorPrimaryDark"
-                    android:padding="@dimen/xmin_padding"/>
+                    android:textColor="@android:color/white" />
 
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColorHint="@color/colorNearWhite"
-                android:layout_marginBottom="@dimen/xmin_padding">
+                android:textColorHint="@color/colorNearWhite">
 
                 <EditText
                     android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:backgroundTint="@color/colorNearWhite"
                     android:drawableEnd="@drawable/ic_security_white_24dp"
                     android:hint="@string/prompt_password"
                     android:imeOptions="actionDone"
                     android:inputType="textPassword"
                     android:maxLines="1"
-                    android:textColor="@android:color/white"
-                    android:background="@color/colorPrimaryDark"
-                    android:padding="@dimen/xmin_padding"/>
+                    android:textColor="@android:color/white" />
 
             </android.support.design.widget.TextInputLayout>
 
