--- a/app/src/main/res/layout/content_detail_chat.xml
+++ b/app/src/main/res/layout/content_detail_chat.xml
@@ -1,26 +1,32 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="id.rentist.mitrarentist.MessageDetailActivity"
+    tools:showIn="@layout/activity_detail_chat"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:orientation="vertical">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_weight="20"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/breadcrumb_height"
-        android:id="@+id/scrollView">
+    <!--<ScrollView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_weight="20"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:padding="@dimen/xmin_padding"-->
+        <!--android:id="@+id/scrollView">-->
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="@dimen/xmin_padding"
-            android:id="@+id/linear_layout_message">
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="vertical"-->
+            <!--android:layout_margin="@dimen/xmin_padding"-->
+            <!--android:id="@+id/linear_layout_message">-->
 
-        </LinearLayout>
-    </ScrollView>
+        <!--</LinearLayout>-->
+
+    <!--</ScrollView>-->
 
     <!--<RelativeLayout-->
         <!--android:layout_width="match_parent"-->
@@ -50,25 +56,35 @@
             <!--android:visibility="gone" />-->
     <!--</RelativeLayout>-->
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/dmsg_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="?attr/actionBarSize"
+        android:background="@color/backgoundLighter"
+        android:padding="@dimen/xmin_padding"></android.support.v7.widget.RecyclerView>
+
     <LinearLayout
         android:id="@+id/input_bar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorBackgound"
-        android:padding="5dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/backgoundLighter"
+        android:focusableInTouchMode="true"
         android:orientation="horizontal"
-        android:focusableInTouchMode="true">
+        android:padding="5dp">
 
         <android.support.v7.widget.CardView
             android:id="@+id/lyt_thread"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:gravity="center_vertical|center_horizontal"
-            app:cardCornerRadius="5dp"
             app:cardBackgroundColor="@android:color/white"
+            app:cardCornerRadius="5dp"
             app:cardElevation="2dp"
-            android:layout_marginLeft="5dp"
             app:cardUseCompatPadding="true">
 
             <EditText
@@ -90,4 +106,5 @@
             app:srcCompat="@drawable/ic_send_white_24dp" />
 
     </LinearLayout>
-</LinearLayout>
+
+</RelativeLayout>
