--- a/app/src/main/res/layout/content_message_list.xml
+++ b/app/src/main/res/layout/content_message_list.xml
@@ -5,6 +5,7 @@
     android:id="@+id/content_feature"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="id.rentist.mitrarentist.MessageListActivity"
     tools:showIn="@layout/activity_message_list">
@@ -24,7 +25,6 @@
             android:textColor="@color/colorBlack54"
             android:textStyle="bold"
             android:text="Anda tidak memiliki pesan" />
-
 
     </LinearLayout>
 
