--- a/app/src/main/res/layout/content_form_yacht_aset.xml
+++ b/app/src/main/res/layout/content_form_yacht_aset.xml
@@ -773,7 +773,7 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Gross Tonaage"
+                            android:text="Gross Tonnage"
                             android:textColor="@color/colorBlack"
                             android:textSize="12sp" />
 
